--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id'application'
     id'com.github.johnrengelman.shadow' version '5.2.0'
+    id 'java'
 }
 
-mainClassName = 'foo.bar.bot'
+mainClassName = 'foo.bar.bot.main'
 
 version '1.0'
 def jdaVersion = '4.2.0_204'
@@ -15,12 +16,16 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.jagrosh:jda-utilities:3.0.4'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     compile "net.dv8tion:JDA:$jdaVersion"
     implementation 'com.sedmelluq:lavaplayer:1.3.50'
-    implementation 'com.jagrosh:jda-utilities-command:3.0.4'
-    compile 'com.github.Devoxin:Flight:2.0.8'
+}
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'foo.bar.bot.main'
+        )
+    }
 
 }
-
 compileJava.options.encoding = 'UTF-8'
