--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     compile "net.dv8tion:JDA:$jdaVersion"
-    compile group: 'com.github.devoxin', name: 'lavaplayer', version: 'a63c541dc5'
+    implementation 'com.github.devoxin:lavaplayer:1.3.54.3'
 }
 jar {
     manifest {
