--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 mainClassName = 'foo.bar.bot.main'
 
 version '1.0'
-def jdaVersion = '4.2.0_204'
+def jdaVersion = '4.2.0_214'
 sourceCompatibility = targetCompatibility = 1.8
 
 repositories {
@@ -17,8 +17,9 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.jagrosh:jda-utilities:3.0.5'
     compile "net.dv8tion:JDA:$jdaVersion"
-    implementation 'com.github.devoxin:lavaplayer:1.3.56'
+    implementation 'com.github.sedmelluq:lavaplayer:1.3.58'
 }
 jar {
     manifest {
